part1/108/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-v05-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-v05
  template:
    metadata:
      labels:
        app: project-v05
    spec:
      containers:
        - name: project-v05
          image: tuplawee7/105-project-v03
