part1/108/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-v05-svc
spec:
  type: ClusterIP
  selector:
    app: project-v05
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8080
